# OctoPrint-MQTTPublish

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_mqttpublish/: __init__.py
octoprint_mqttpublish/static/js/: mqttpublish.js
octoprint_mqttpublish/templates/: mqttpublish_settings.jinja2
